fix:  resolve critical Sonar warnings